# Robotrade-v3

./: .dockerignore  .editorconfig  .env.local.example  .gitignore  .pre-commit-config.yaml  Cargo.toml  INFO.md  Makefile  README.md  mise.toml  pyproject.toml
.devcontainer/: devcontainer.json  postCreateCommand.sh
dashboards/: candles.json
deployments/civo/: .env.local.example
deployments/dev/backfill-technical-indicators/: backfill-technical-indicators-cm.yaml  candles-historical-d.yaml  kustomization.yaml  technical-indicators-historical-d.yaml  technical-indicators-historical-j.yaml  trades-historical-d.yaml
deployments/dev/candles/: candles-d.yaml
deployments/dev/kind/: create_cluster.sh  install_grafana.sh  install_kafka.sh  install_kafka_ui.sh  install_metabase.sh  install_risingwave.sh  kind-with-portmapping.yaml
deployments/dev/news/: kustomization.yaml  news-cm.yaml  news-d.yaml
deployments/dev/news-sentiment/: kustomization.yaml  news-sentiment-cm.yaml  news-sentiment-d.yaml
deployments/dev/prediction-api/: kustomization.yaml  prediction-api-cm.yaml  prediction-api-d.yaml  prediction-api-s.yaml
deployments/dev/prediction-generator/: kustomization.yaml  prediction-generator-cm.yaml  prediction-generator-d.yaml
deployments/dev/technical_indicators/: technical-indicators-d.yaml
deployments/dev/trades/: trades-d.yaml
deployments/prod/: kustomization.yaml
docker/: candles.Dockerfile  news-sentiment.Dockerfile  news.Dockerfile  prediction-api.Dockerfile  prediction-generator.Dockerfile  technical-indicators-1stage.Dockerfile  technical-indicators.Dockerfile  trades.Dockerfile  training-pipeline.Dockerfile
scripts/: build-and-push-image.sh  deploy.sh
services/candles/: pyproject.toml  settings.env
services/news/: .env.local.sample  pyproject.toml
services/news-sentiment/: .env.local.sample  Makefile  README.md  download_historical_news.sh  pyproject.toml  query.sql
services/news-sentiment/src/news_sentiment/: __init__.py  config.py  curate_dataset.py  dataset.py  evaluate.py  main.py  metrics.py  sentiment_extractor.py
services/news-sentiment/src/news_sentiment/baml_src/: clients.baml  generators.baml  sentiment_scores.baml
services/prediction-api/: .env.local.sample  .envrc  Cargo.toml  Makefile  latest_predictions.sql
services/predictor/: .env.local.sample  README.md  eda_report.html  pyproject.toml  query.sql
services/predictor/src/predictor/: __init__.py  config.py  data_validation.py  debug.py  model_registry.py  model_validation.py  models.py  predict.py  train.py
services/technical_indicators/: config.yaml  pyproject.toml  query.sql  settings.env
services/trades/: pyproject.toml  settings.env
services/trades/src/trades/: __init__.py  config.py  kraken_rest_api.py  kraken_websocket_api.py  main.py  trade.py
(+42 files in other folders)
