[project]
name = "predictor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Paulescu", email = "plabartabajo@gmail.com" } 
]
requires-python = ">=3.12"
dependencies = [
    "great-expectations>=0.18.8",
    "lazypredict>=0.2.16",
    "mlflow>=2.22.0",
    "optuna>=4.3.0",
    "psycopg2-binary==2.9.9",
    "scikit-learn>=1.6.1",
    "ydata-profiling>=4.16.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
